objects/WR_FDS_Product__c.object
<CustomObject>
    <description>This being used in online warranty registration and is replica of FDS products.</description>
    <fields>
        <fullName>Alternate_Packing_Slip__c</fullName>
        <externalId>true</externalId>
        <label>Alternate PL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_SN_In_terms_of_Item_code__c</fullName>
        <formula>IF( Item__c != &apos;&apos;, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bad SN(In terms of Item code)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Converted_To_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted To Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_on_ItemID_Populate__c</fullName>
        <label>Exception on ItemID Populate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF__c</fullName>
        <description>Order Management - New field to capture data from FDS about flash test data coming from the manufacturer
Release WW 22 - 2016</description>
        <label>FF</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flash_Test_Date__c</fullName>
        <description>Order Management - New field to capture data from FDS about flash test data coming from the manufacturer
Release WW 22 - 2016</description>
        <label>Flash Test Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Good_SN_In_terms_of_Item_code__c</fullName>
        <formula>IF( Item__c  != &apos;&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Good SN(In terms of Item code)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImpMod__c</fullName>
        <description>Order Management - New field to capture data from FDS about flash test data coming from the manufacturer
Release WW 22 - 2016</description>
        <label>ImpMod</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IscMod__c</fullName>
        <description>Order Management - New field to capture data from FDS about flash test data coming from the manufacturer
Release WW 22 - 2016</description>
        <label>IscMod</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item1_ID__c</fullName>
        <formula>Item__r.Item_ID__c</formula>
        <label>Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>WR_FDS_Products</relationshipLabel>
        <relationshipName>WR_FDS_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KW_Registered__c</fullName>
        <formula>IF( Converted_To_Asset__c ,   VALUE(Item__r.Item_Category_3__c)  ,  0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KW Registered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KW_Shipped__c</fullName>
        <formula>VALUE(Item__r.Item_Category_3__c)</formula>
        <label>KW Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateByCastIron__c</fullName>
        <label>LastModifiedDateByCastIron</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Modified_by_CastIron__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Modified by CastIron</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packing_Slip__c</fullName>
        <externalId>true</externalId>
        <label>Packing Slip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickUpDate__c</fullName>
        <label>PickUpDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <description>Order Management - New field to capture data from FDS about flash test data coming from the manufacturer
Release WW 22 - 2016</description>
        <label>Power</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Not_Registered__c</fullName>
        <description>If  Product is not registered then 1 else 0</description>
        <formula>IF( NOT(Converted_To_Asset__c),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Not Registered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Registered__c</fullName>
        <description>Hold 1 if Converted to Asset is marked a true</description>
        <formula>If(Converted_To_Asset__c,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Registered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <externalId>true</externalId>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>So_Created_Date__c</fullName>
        <formula>WR_ORACLE_SalesOrder__r.So_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>So Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <formula>Text(WR_ORACLE_SalesOrder__r.Partner_Account__r.Theater__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_PL_Name__c</fullName>
        <label>3PL Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VmpMod__c</fullName>
        <description>Order Management - New field to capture data from FDS about flash test data coming from the manufacturer
Release WW 22 - 2016</description>
        <label>VmpMod</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VocMod__c</fullName>
        <description>Order Management - New field to capture data from FDS about flash test data coming from the manufacturer
Release WW 22 - 2016</description>
        <label>VocMod</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WR_ORACLE_SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WR_ORACLE_SalesOrder</label>
        <referenceTo>WR_ORACLE_SalesOrder__c</referenceTo>
        <relationshipLabel>WR_FDS_Products</relationshipLabel>
        <relationshipName>WR_FDS_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WR_FDS_Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Item1_ID__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flash_Test_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todays_Records</fullName>
        <columns>NAME</columns>
        <columns>Third_PL_Name__c</columns>
        <columns>Converted_To_Asset__c</columns>
        <columns>Product_Name__c</columns>
        <columns>WR_ORACLE_SalesOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays Records</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Product - {0000}</displayFormat>
        <label>WR_FDS_Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WR_FDS_Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Duplicate_Record_from_Cast_Iron</fullName>
        <active>true</active>
        <description>Duplicate record came for upsert from Cast Iron Process</description>
        <errorConditionFormula>AND(
NOT($User.ByPassValidation__c),
NOT(ISNEW()),
NOT(ISChanged( WR_ORACLE_SalesOrder__c )),
NOT(ISChanged( Converted_To_Asset__c )),
NOT(ISChanged(Packing_Slip__c )),
NOT(ISChanged( PickUpDate__c )),
NOT(ISChanged(Alternate_Packing_Slip__c )),
NOT(ISChanged(Serial_Number__c )),
NOT(ISCHANGED( Item__c )),
NOT(ISCHANGED( Product_Name__c )),
NOT(ISCHANGED( Exception_on_ItemID_Populate__c ))
)</errorConditionFormula>
        <errorDisplayField>Third_PL_Name__c</errorDisplayField>
        <errorMessage>Duplicate S/N, PL#,TRD Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pickup_Date_Validation</fullName>
        <active>true</active>
        <description>Don&apos;t allow override TRD_SHIPDATE (Pickup Date) if new date being pushed has older TRD_SHIP_DATE (Pickup Date)</description>
        <errorConditionFormula>IF(  $User.ByPassValidation__c ,false,IF(
       ISNEW(),
        false,
         IF(
         OR(
         AND(
                   NOT(ISNULL( PRIORVALUE( PickUpDate__c) ) ),
                   PickUpDate__c  &lt;   PRIORVALUE( PickUpDate__c)
           ),
          AND(
               ISNULL( PickUpDate__c) ,NOT(ISNULL( PRIORVALUE( PickUpDate__c) ) )
           )
          ),
          true,
          false) 
))</errorConditionFormula>
        <errorDisplayField>PickUpDate__c</errorDisplayField>
        <errorMessage>Pickup Date must not be less than existing date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Registered_Product_Validation</fullName>
        <active>false</active>
        <description>Do not allow to override (update) if converted to asset is marked true</description>
        <errorConditionFormula>IF(
    ISNEW(),
    false,
     (PRIORVALUE(Converted_To_Asset__c)  &amp;&amp; $User.ByPassValidation__c == false) &amp;&amp;       ( NOT(ISBLANK( PRIORVALUE( Item__c))) &amp;&amp;  NOT(ISCHANGED( Item__c ))) == true
)</errorConditionFormula>
        <errorMessage>Registered product can not be updated.</errorMessage>
    </validationRules>
</CustomObject>